docs: tighten run/test design for clarity and KISS after systematic review
Review pass over docs/planned/lathe-run-test-debug.md addressing clarity
defects and implementation simplicity.

Mechanical fixes:
- Remove a stray closing code fence at the end of §15 (fences now balanced).
- Drop the contradictory "resources handled by the shim copy" bullet in §4.4
  (it conflicted with the resource-currency subsection) and its wrong §11
  cross-reference.
- Disambiguate "§6 classpath-remap" -> "lathe-design.md §6".
- Replace the undefined "run-launch for main" with the kind discriminator, and
  add a schema field note defining kind = surefire|failsafe|exec (one template
  schema, no separate run-launch file).
- Fix the "(§8-debug)" cross-reference to "(§8)".

KISS / stage-1 de-scoping:
- Results channel: drop the impractical inherited-fd option (ProcessBuilder only
  wires fds 0/1/2) and make an append-only NDJSON file the default sink, with a
  loopback socket as an optional upgrade.
- Resource currency: stage 1 now falls back to Maven on a stale resource (one
  branch, no new captured data); the currency-refresh + copy-back is explicitly
  a later optimization, and §15 records it as deferred.
- Collapse the three overlapping §4.4 prose bullets into a single save-then-run
  sentence plus the numbered completeness gate.
- Add the LATHE_CAPTURE_MODE flag (prose + reference shim) so the exec classpath
  capture (no ForkedBooter) snapshots unconditionally instead of passing through.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>